--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/edit.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/edit.scss
@@ -505,7 +505,8 @@
         height: 100%;
         padding: 0;
         max-width: 380px;
-        align-self: flex-end;
+        margin-right: 0;
+        margin-left: auto;
       }
     }
 
